issue 16 fix flex wrap issue to history search

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -93,6 +93,7 @@ label {
     background-position: 0 -10px;
     border-radius: 10px;
     color: var(--primary);
+    font-size: 16px;
 }
 
 .button:hover {
@@ -275,6 +276,7 @@ section {
 
    .list {
     display: flex;
+    flex-wrap: wrap;
    }
 }
 
